# cookiecutter-python-cdk-stack

./: .flake8  .gitignore  .python-version  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_python_cdk_stack.py
{{cookiecutter.pkg_name}}/: mypy.ini
{{cookiecutter.pkg_name}}/.github/workflows/: pipeline.yaml  pipeline.yaml.pre
{{cookiecutter.pkg_name}}/infrastructure/: deployment.py  {{ cookiecutter.pkg_name }}.py
{{cookiecutter.pkg_name}}/runtime/: app.py
{{cookiecutter.pkg_name}}/tests/unit/: conftest.py
{{cookiecutter.pkg_name}}/tests/unit/infrastructure/: test_{{ cookiecutter.pkg_name }}.py
{{cookiecutter.pkg_name}}/tests/unit/runtime/: test_handler.py
{{cookiecutter.project_name}}/: .flake8  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: pipeline.yaml
{{cookiecutter.project_name}}/infrastructure/: deployment.py  {{ cookiecutter.project_slug }}.py
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/tests/unit/ {% 'events' if cookiecutter.use_pytest == 'y' else ''-%}/: event_api_1.json
{{cookiecutter.project_name}}/tests/unit/infrastructure/: test_{{ cookiecutter.pkg_name }}.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  cdk.json  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/infrastructure/: deployment.py  {{ cookiecutter.pkg_name }}.py
{{cookiecutter.project_slug}}/runtime/: app.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/integration/: conftest.py  test_restapi.py
{{cookiecutter.project_slug}}/tests/unit/infrastructure/: test_{{ cookiecutter.pkg_name }}.py
{{cookiecutter.project_slug}}/tests/unit/runtime/: test_handler.py
